gke-deploy/ray-cluster-gclb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ray-cluster-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /weather_prediction_model
            pathType: Prefix
            backend:
              service:
                name: rvice-weather-prediction-raycluster-5phmv-head-svc
                port:
                  number: 8000
